<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SSHFP</string>
    <string name="nav_terminal">终端</string>
    <string name="nav_sftp">文件</string>
    <string name="nav_hosts">主机</string>
    <string name="add_host">添加主机</string>
    <string name="edit_host">编辑主机</string>
    <string name="delete_host">删除主机</string>
    <string name="host_name">主机名称</string>
    <string name="host_address">主机地址</string>
    <string name="host_port">端口</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="auth_method">认证方式</string>
    <string name="auth_password">密码</string>
    <string name="auth_key">密钥</string>
    <string name="private_key_path">私钥路径</string>
    <string name="passphrase">密钥密码</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开</string>
    <string name="connecting">连接中...</string>
    <string name="connection_failed">连接失败</string>
    <string name="local">本地</string>
    <string name="remote">远程</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="delete">删除</string>
    <string name="rename">重命名</string>
    <string name="refresh">刷新</string>
    <string name="file">文件</string>
    <string name="directory">目录</string>
    <string name="size">大小</string>
    <string name="permissions">权限</string>
    <string name="new_folder">新建文件夹</string>
    <string name="uploading">上传中...</string>
    <string name="downloading">下载中...</string>
    <string name="file_saved">文件已保存</string>
    <string name="file_opened">文件已打开</string>
    <string name="error_saving">保存失败</string>
    <string name="error_opening">打开失败</string>
    <string name="no_file_selected">未选择文件</string>
    <string name="confirm_delete">确认删除</string>
    <string name="confirm_delete_message">确定要删除选中的文件吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="terminal">终端</string>
    <string name="clear">清空</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="select_all">全选</string>
    <string name="find">查找</string>
    <string name="replace">替换</string>
    <string name="find_next">查找下一个</string>
    <string name="find_previous">查找上一个</string>
    <string name="encoding">编码</string>
    <string name="line_numbers">行号</string>
    <string name="word_wrap">自动换行</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="please_select_host">请选择一个主机</string>
    <string name="no_hosts">没有配置主机</string>
    <string name="add_host_first">请先添加主机</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="unknown_error">未知错误</string>
    <string name="connection_error">连接错误</string>
    <string name="authentication_error">认证失败</string>
    <string name="host_key_error">主机密钥验证失败</string>
    <string name="timeout_error">连接超时</string>
    <string name="go_up">返回上级目录</string>
    <string name="select_host_connect_terminal">选择主机后点击连接按钮打开终端</string>
</resources>
